# aruco_yolo_benchmark

./: README.md
aruco/calibration/: CMakeLists.txt  main.cpp
aruco/marker_detector/: CMakeLists.txt  camera_calibration.yml  main.cpp
aruco/marker_detector/dictionary/: dict_save.yml
yolo/: clear_dataset.py
yolo/imagens_filtradas/: IMG_0001.txt  IMG_0014.txt  IMG_0169.txt  IMG_0229.txt  IMG_0308.txt  IMG_0423.txt  IMG_0458.txt  IMG_0474.txt  IMG_0475.txt  IMG_0520.txt  IMG_0533.txt  IMG_0545.txt  IMG_0552.txt  IMG_0589.txt  IMG_0604.txt  IMG_0672.txt  IMG_0757.txt  IMG_0815.txt  IMG_0828.txt  IMG_0900.txt  IMG_1.txt  IMG_10.txt  IMG_1032.txt  IMG_1058.txt  IMG_1062.txt  IMG_1070.txt  IMG_1083.txt  IMG_1092.txt  IMG_1099.txt  IMG_11.txt  IMG_1107.txt  IMG_1111.txt  IMG_1113.txt  IMG_1115.txt  IMG_1116.txt  IMG_1128.txt  IMG_12.txt  IMG_1299.txt  IMG_13.txt  IMG_1343.txt  (+1076 more)
